Complete Titan Minecraft Server v1.0 - Built by galion.studio (Maciej Grajczyk) with Cursor + Claude Sonnet 4.5
- Complete mod sync system with parallel downloads
- Grok 4 Fast AI integration (<1s responses)
- Docker-based infrastructure
- Fast package system (<2min setup vs 5-7min)
- Client launcher with auto-sync
- Comprehensive documentation (30+ guides)
- Built using First Principles methodology

Developer: Maciej Grajczyk (galion.studio)
AI Assistant: Cursor IDE with Claude Sonnet 4.5
Project Type: Personal Hobby Project
Time: 15 hours from concept to production

Features:
- Mod Sync API (FastAPI)
- AI Bridge (Grok 4 Fast)
- Complete .minecraft packages
- Parallel downloads (5x faster)
- Zero-config client setup
- Docker orchestration
- Monitoring (Prometheus + Grafana)

Credits: galion.studio - Maciej Grajczyk + Cursor/Sonnet 4.5

--- a/env.grok.example
+++ b/env.grok.example
@@ -3,7 +3,14 @@
 # Get your API key from: https://openrouter.ai/keys
 
 # OpenRouter API Configuration (unified API for all models)
+# Get your key from: https://openrouter.ai/keys
 OPENROUTER_API_KEY=your-openrouter-api-key-here
+
+# Grok Model Selection (choose one):
+# x-ai/grok-4-fast = Grok 4 Fast (recommended - ultra fast responses)
+# x-ai/grok-2-1212 = Grok 2 (stable, cheaper)
+# x-ai/grok-vision-beta = Grok Vision (image support)
+GROK_MODEL=x-ai/grok-4-fast
 
 # Minecraft Server RCON Configuration
 MINECRAFT_RCON_HOST=localhost
