feat: Add Client Console to Developer Console
- Create new client console module with AI chat, RCON, and project tools
- Integrate into dev-console sidebar navigation
- Add smart command routing (@ai, /cmd, @project)
- Implement command history with arrow key navigation
- Add real-time status indicators for AI and RCON
- Create standalone launch scripts (START-CLIENT-CONSOLE.cmd)
- Add comprehensive documentation and quick start guides
- Support async operations for better performance
- Include color-coded output and error handling

Features:
- Grok-4 Fast AI integration (<1 second responses)
- Minecraft RCON control (direct commands)
- Project management (Git, Docker, builds)
- Command history and smart routing
- Real-time connection status
- Clean, modern UI integrated with dev-console

Files Added:
- dev-console/client/__init__.py
- dev-console/client/client_console.py (500+ lines)
- dev-console/client/README.md
- dev-console/CLIENT-CONSOLE-ADDED.md
- dev-console/QUICK-START-CLIENT-CONSOLE.md
- START-CLIENT-CONSOLE.cmd
- dev-console/START-WITH-CLIENT-CONSOLE.cmd

Files Modified:
- dev-console/ui/sidebar.py (added navigation button)
- dev-console/console_main.py (added view method)
- dev-console/README.md (updated documentation)

--- a/requirements.txt
+++ b/requirements.txt
@@ -21,7 +21,14 @@ colorama>=0.4.6
 prompt_toolkit>=3.0.0
 
 # Minecraft RCON client
-mcrcon>=1.0.0
+mcrcon>=0.7.0
 
 # Async utilities
 asyncio>=3.4.3
+
+# ========================================
+# TRANSPARENT CONSOLE GUI (NEW)
+# ========================================
+
+# Modern GUI framework
+customtkinter>=5.2.0
